# aiophyn

./: .gitignore  LICENSE  README.md  pyproject.toml
aiophyn/: __init__.py  api.py  const.py  device.py  errors.py  home.py
aiophyn/utils/: device_dump.py
examples/: test_api.py
